@@ -66,6 +66,7 @@
                         --add-opens java.base/java.nio=ALL-UNNAMED
                         --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens java.desktop/java.beans=ALL-UNNAMED
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
